--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Schedule for TechCon 2024</title>
 </head>
 <body>
 
-  <!-- Header -->
   <header>
     <h1>Schedule for TechCon 2024</h1>
     <nav>
@@ -20,7 +18,6 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
     <table>
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
@@ -33,42 +30,18 @@
       </thead>
       <tbody>
         <tr>
-          <td>09:00 AM - 10:00 AM</td>
+          <td>09:00 AM</td>
           <td>Opening Keynote</td>
-          <td>Dr. Ada Simmons</td>
+          <td>Jane Doe</td>
         </tr>
-        <tr>
-          <td>10:15 AM - 11:00 AM</td>
-          <td>Future of Cybersecurity</td>
-          <td>Marcus Lee</td>
-        </tr>
-        <tr>
-          <td>11:15 AM - 12:00 PM</td>
-          <td>Cloud Computing for Startups</td>
-          <td>Priya Desai</td>
-        </tr>
-        <tr>
-          <td>01:00 PM - 02:30 PM</td>
-          <td>Panel Discussion: Tech Ethics</td>
-          <td>Various Speakers</td>
-        </tr>
-        <tr>
-          <td>03:00 PM - 04:00 PM</td>
-          <td>Building Inclusive Tech Teams</td>
-          <td>Sandra Okafor</td>
-        </tr>
-        <tr>
-          <td>04:15 PM - 05:00 PM</td>
-          <td>Closing Remarks & Networking</td>
-          <td>Conference Committee</td>
-        </tr>
+        <!-- More rows -->
       </tbody>
     </table>
   </main>
 
-  <!-- Footer -->
+  <!-- Paste footer from homepage below -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. <strong>Copyright</strong>.</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
 
 </body>
